Fix sidebar link spacing

--- a/flex/07-flex-layout-2/style.css
+++ b/flex/07-flex-layout-2/style.css
@@ -23,7 +23,6 @@ body {
   display: flex;
   justify-content: center;
   align-items: center;
-  margin-top: auto;
 }
 
 .body {
@@ -49,6 +48,7 @@ body {
   box-shadow: 2px 4px 16px rgba(0,0,0,.06);
   border-radius: 4px;
   padding: 8px;
+  margin: 16px;
 }
 
 a {
@@ -57,5 +57,10 @@ a {
 }
 
 ul {
+  display: flex;
+  flex-direction: column;
   list-style: none;
+  padding: 0px;
+  margin: 0px;
+  gap: 16px;
 }
